# aiplus-cstudy

./: .env.example  .gitignore  README.md  docker-compose.deploy.yaml  docker-compose.yaml  makefile  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: deploy.yml
apps/api/: dockerfile  dockerfile.dev  package.json  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: compat.py
apps/api/app/api/public/: __init__.py  chat.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/domain/ai/: __init__.py  factory.py  service.py
apps/api/app/domain/ai/providers/: __init__.py  base.py  common.py  gemini.py  openai.py
apps/api/app/services/compat/: __init__.py  error_policy.py  generation_service.py  normalizer_validator.py  pipeline_runtime.py
apps/api/tests/: quality_eval_common.py  quality_eval_report.py  test_compat_chat.py  test_compat_error_policy.py  test_compat_generation.py  test_pipeline_runtime_usage.py  test_provider_usage_meta.py  test_quality_eval.py
apps/excutor/: dockerfile  dockerfile.dev  package.json  test.html
apps/web/: dockerfile  dockerfile.dev  next.config.ts  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo
db/: dockerfile
db/archive/: 002_curriculum_schema.sql  009_ai_generation_logs.sql  011_assistant_persona.sql
db/init/: 00_auth_schema.sql
docs/: architecture.md  backend-guide.md  contracts-guide.md  data-collection-map.md  frontend-guide.md  onboarding.md  practice-api-draft-v0.yaml  team-rules.md
infra/migrations/: 000_baseline_full.sql  (+1 more)
(+134 files in other folders)
